--- a/src/Zap.css
+++ b/src/Zap.css
@@ -1,28 +1,59 @@
-.App {
-  text-align: center;
+.Zap {
+  --soft-black: #111111;
+  --dark-grey: #222222;
+  --grey: #444444;
+  --text-color: #EEEEEE;
+  --should-not-be-seen: #FF0000;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+.Zap h2 {
+  color: var(--text-color);
+  font-weight: lighter;
+  margin: 2vw;
+  width: min-content;
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+.Zap-CommandBar {
+  background-color: var(--soft-black);
+  position: fixed;
+  top: 0;
+  left: 0vw;
+  width: 50vw;
+  height: 10vh;
 }
 
-.App-title {
-  font-size: 1.5em;
+.Zap-PreviewWindow {
+  background-color: var(--should-not-be-seen);
+  position: fixed;
+  top: 10vh;
+  left: 0vw;
+  width: 50vw;
+  height: 45vh;
 }
 
-.App-intro {
-  font-size: large;
+.Zap-PlayWindow {
+  background-color: var(--should-not-be-seen);
+  position: fixed;
+  top: 55vh;
+  left: 0vw;
+  width: 50vw;
+  height: 45vh;
 }
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.Zap-HierarchyWindow {
+  background-color: var(--grey);
+  position: fixed;
+  top: 0;
+  left: 50vw;
+  width: 25vw;
+  height: 100vh;
+}
+
+.Zap-InspectorWindow {
+  background-color: var(--dark-grey);
+  position: fixed;
+  top: 0;
+  left: 75vw;
+  width: 25vw;
+  height: 100vh;
 }
