--- a/src/Zap.css
+++ b/src/Zap.css
@@ -7,11 +7,11 @@
   --button-icon-color: #0088BB;
 }
 
-.Zap h2 {
+.Zap h2, .Zap h3 {
   color: var(--text-color);
   font-weight: lighter;
-  margin: 2vw;
   width: min-content;
+  margin: 0;
 }
 
 .Zap-CommandBar {
@@ -70,11 +70,21 @@
 
 .Zap-HierarchyWindow {
   background-color: var(--grey);
+  color: var(--text-color);
   position: fixed;
   top: 0;
   left: 50vw;
-  width: 25vw;
-  height: 100vh;
+  width: 22vw;
+  height: calc(100vh - 3vw);
+  padding: 1.5vw;
+}
+
+.Zap-HierarchyEntities li, .Zap-HierarchySystems li {
+  list-style: none;
+}
+
+.Zap-HierarchyEntities, .Zap-HierarchySystems {
+  padding: 2.5vw;
 }
 
 .Zap-InspectorWindow {
@@ -82,7 +92,24 @@
   position: fixed;
   top: 0;
   left: 75vw;
-  width: 25vw;
-  height: 100vh;
+  width: 22vw;
+  height: calc(100vh - 3vw);
+  padding: 1.5vw;
   overflow: auto;
+}
+
+.Zap-InspectorComponent {
+  margin: 2.5vw;
+}
+
+.Zap-InspectorComponentProperty {
+  margin: 2.5vw;
+  color: var(--text-color);
+}
+
+.Zap-InspectorComponentPropertyEditor {
+  background-color: var(--soft-black);
+  color: var(--text-color);
+  font-family: monospace;
+  font-size: 1vw;
 }
