--- a/src/Zap.css
+++ b/src/Zap.css
@@ -30,7 +30,6 @@
   position: fixed;
   z-index: 1;
   top: 0;
-  /*left: 50vw;*/
 }
 
 .Zap-HierarchyInspector-Divider {
@@ -40,7 +39,14 @@
   position: fixed;
   z-index: 1;
   top: 0;
-  /*left: 75vw;*/
+}
+
+.Zap-PreviewPlay-Divider {
+  background-color: var(--grey);
+  height: 2vh;
+  position: fixed;
+  z-index: 1;
+  left: 0;
 }
 
 .Zap-CommandButton {
