--- a/src/Zap.css
+++ b/src/Zap.css
@@ -59,6 +59,10 @@
   outline: none;
 }
 
+.Zap-CommandButton.Zap-DisabledButton {
+  opacity: 0.2;
+}
+
 .Zap-IconPlay {
   width: 0;
   height: 0;
@@ -66,6 +70,13 @@
   border-bottom: 2.30940107676vh solid transparent;
   border-left: 4vh solid var(--button-icon-color);
   transform: translate(25%);
+}
+
+.Zap-IconStop {
+  width: 3vh;
+  height: 3vh;
+  transform: translate(50%);
+  background-color: var(--button-icon-color);
 }
 
 .Zap-IconPause {
