--- a/src/Zap.css
+++ b/src/Zap.css
@@ -175,11 +175,15 @@
   display: inline-block;;
 }
 
-.Zap-InspectorSystem {
+.Zap-SystemInspector {
   margin: 2.5vw;
   color: var(--text-color);
 }
 
-.Zap-InspectorSystem .Zap-EditButton {
+.Zap-SystemInspector .Zap-EditButton {
   margin-top: 2.5vw;
+}
+
+.Zap-EntityInspector .Zap-AddButton {
+  margin: 2.5vw;
 }
