Refactor buttons to use button tags

--- a/src/Zap.css
+++ b/src/Zap.css
@@ -159,20 +159,22 @@
   font-size: 1vw;
 }
 
-.Zap-AddButton {
-  background-color: var(--add-button-color);
+.Zap-Button {
   border-radius: 0.25vw;
   padding: 0.5vw;
   color: var(--text-color);
-  display: inline-block;;
+  display: inline-block;
+  outline: none;
+  border: none;
+  font-size: 1em;
+}
+
+.Zap-AddButton {
+  background-color: var(--add-button-color);
 }
 
 .Zap-EditButton {
   background-color: var(--edit-button-color);
-  border-radius: 0.25vw;
-  padding: 0.5vw;
-  color: var(--text-color);
-  display: inline-block;;
 }
 
 .Zap-SystemInspector {
